added buttons to the homepage

--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 <section id="home-view" class="view">
     <p>This is a description of the FoodFit app. Your conjecture is totally wrong, I assure you. If I can perceive her regard
         for him, he must be a simpleton, indeed, not to discover it too. Those were your words.</p>
+        <a href="/food-search" class="homepage-button">Search Food</a>                
+        <a href="/activity-search" class="homepage-button">Search Activities</a>                
+           
 </section>
 
 <section id="foodResults-view" class="view">
