added intro text to home page

--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
 </section>
     
 <section id="home-view" class="view">
-    <p>This is a description of the FoodFit app. Your conjecture is totally wrong, I assure you. If I can perceive her regard
-        for him, he must be a simpleton, indeed, not to discover it too. Those were your words.</p>
+    <h3>Welcome to FoodFit! This app helps with both sides of the 80/20 health and fitness equation by helping you choose food to eat and activities to do.</h3>
+    <p>Click the "Search Food" button to search for recipes based on an ingredient, calorie range, and dietary restriction.</p>
+    <p>Click the "Search Activities" button to choose from a variety of themes to find a fun activity.</p>
         <a href="/food-search" class="homepage-button">Search Food</a>                
         <a href="/activity-search" class="homepage-button">Search Activities</a>                
            
