edited intro text

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </section>
     
 <section id="home-view" class="view">
-    <h3>Welcome to FoodFit! This app helps with both sides of the 80/20 health and fitness equation by helping you choose food to eat and activities to do.</h3>
+    <h3>Welcome to FoodFit! This app helps with both sides of the 80/20 health and fitness equation by helping you choose food activities to meet your goals.</h3>
     <p>Click the "Search Food" button to search for recipes based on an ingredient, calorie range, and dietary restriction.</p>
     <p>Click the "Search Activities" button to choose from a variety of themes to find a fun activity.</p>
         <a href="/food-search" class="homepage-button">Search Food</a>                
