added info to OpenGraph tags

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>FoodFit</title>
     <meta property="og:title" content="FoodFit" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
+    <meta property="og:url" content="https://team-80-20.github.io/FoodFit/" />
+    <meta property="og:image" content="styles/images/FoodFit-Logo-Mark-Rounded-Corners.png" />
 
     <script type="text/x-handlebars-template" id="recipe-template">
         <div class="recipe-div thumbnail">
