added normalize.css file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="/styles/images/FoodFit-favicon.png"/>
