--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <meta property="og:title" content="FoodFit" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://team-80-20.github.io/FoodFit/" />
-    <meta property="og:image" content="styles/images/FoodFit-Logo-Mark-Rounded-Corners.png" />
+    <meta property="og:image" content="https://team-80-20.github.io/FoodFit/styles/images/FoodFit-Logo-Mark-Rounded-Corners.png" />
+    <meta property="og:description" content="This app helps with both sides of the 80/20 health and fitness equation by helping you choose food and activities to meet your goals." />
 
     <script type="text/x-handlebars-template" id="recipe-template">
         <div class="recipe-div thumbnail">
@@ -72,7 +73,7 @@
 <section id="home-view" class="view">
     <img class="homepage-masthead" src="/styles/images/Food1.png" alt="Food Imag">
     <div class="info">
-    <h3>Welcome to FoodFit! <br>This app helps with both sides of the 80/20 health and fitness equation by helping you choose food activities to meet your goals.</h3>
+    <h3>Welcome to FoodFit! <br>This app helps with both sides of the 80/20 health and fitness equation by helping you choose food and activities to meet your goals.</h3>
     <br>
     <p class="home-para">Search for recipes based on an ingredient, calorie range, and dietary restriction.</p>
     <a href="/food-search" class="homepage-button">Search Food</a>                
