added code to display TDEE

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         </select>
         <button type="click" class="submit" id="tdee-submit">Submit</button>
     </form>
+    <p id="tdee-spot">Your TDEE is: <span id="tdee-answer"></span></p>
     <a href="/food-search" class="homepage-button">Search Food</a> 
 </section>
 
