--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <button class="hamburger">&#9776;</button>
         <button class="cross">&#735;</button>
         <a href="/"><img id="foodfit-logo" src="styles/images/FoodFIt-Logo-w-Text-Rounded-Corners.png" alt="FoodFit Logo"></a>
-        <hr>
+        <hr id="nav-hr">
         <ul id="nav" class="menu"> 
             <a href="/"><li>Home</li></a>
             <a href="/about"><li>About Us</li></a>
@@ -106,7 +106,7 @@
 <section id="about-view" class="view">
     <h3 class="banner">Meet our fantasitc team!</h3>
 
-    <div id="ariel">
+    <div id="ariel" class="person">
         <h2 class="name">Ariel Altaras</h2>
             <img class="thumbnail proPic" src="styles/images/ariel.jpg" alt="">
 
@@ -116,20 +116,20 @@
         <a href="https://www.linkedin.com/in/arielaltaras/"><img class="icon" src="styles/images/if_linkedin_28298.png" alt=""></a>
         <a href="https://github.com/stariel"><img class="icon" src="styles/images/if_github_82694.png" alt=""></a>
     </div>
-
-    <div id="devin">
+    <hr class="hr">
+    <div id="devin" class="person">
         <h2 class="name">Devin Cunningham</h2>
             <img class="thumbnail proPic" src="styles/images/devin.jpg" alt="">
-
         <p id="about">
         Devin is a communications and marketing specialist for a local pediatric company focusing on creating advertisements and social media marketing. When he isn't behind the computer, he is either out creating videos, snowboarding, or hanging out on Lake Sammamish. Once he graduates Code Fellows, he wants to become the developer for the company where he works.
         </p>
         <a href="https://www.linkedin.com/in/devin-cunningham-9222314b/"><img class="icon" src="styles/images/if_linkedin_28298.png" alt=""></a>
         <a href="https://github.com/DevinTyler26"><img class="icon" src="styles/images/if_github_82694.png" alt=""></a>
     </div>
-    <div id="ryan">
+    <hr>
+    <div id="ryan" class="person">
         <h2 class="name">Ryan Johnson</h2>
-            <img class="thumbnail proPic" src="styles/images/CFshield.png" alt="">
+            <img class="thumbnail proPic" src="styles/images/ryan.jpg" alt="">
 
         <p id="about">
         Ryan PE teacher by day amateur web developer by night. Father of two, husband of 10 years, sacrificing sleep and
