added . for logo link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <nav class="inner-nav">
         <button class="hamburger">&#9776;</button>
         <button class="cross">&#735;</button>
-        <a href="/"><img id="foodfit-logo" src="styles/images/FoodFIt-Logo-w-Text-Rounded-Corners.png" alt="FoodFit Logo"></a>
+        <a href="./"><img id="foodfit-logo" src="styles/images/FoodFIt-Logo-w-Text-Rounded-Corners.png" alt="FoodFit Logo"></a>
         <hr id="nav-hr">
         <ul id="nav" class="menu"> 
             <a href="./"><li>Home</li></a>
