added log to read me

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
     <div id="ryan">
         <h2 class="name">Ryan Johnson</h2>
-            <img class="thumbnail proPic" src="styles/images/CFshield.png" alt="">
+            <img class="thumbnail proPic" src="" alt="">
 
         <p id="about">
         Ryan PE teacher by day amateur web developer by night. Father of two, husband of 10 years, sacrificing sleep and
