changed the size of the background image

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </section>
     
 <section id="home-view" class="view">
-    <img class="homepage-masthead" src="/styles/images/Food1.png" alt="Food Imag">
+    <img class="homepage-masthead" src="/styles/images/foodBackground.png" alt="Food Imag">
     <div class="info">
     <h3>Welcome to FoodFit! <br>This app helps with both sides of the 80/20 health and fitness equation by helping you choose food and activities to meet your goals.</h3>
     <br>
