fixing link for TDEE calc

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <option value="&health=vegetarian">Vegetarian</option>
         </select>
         <button type="click" class="submit" id="foodSearch-submit">Submit</button>
-        <a href="/tdee" id="tdee-button">Calculate your TDEE</a> 
+        <a href="./tdee" id="tdee-button">Calculate your TDEE</a> 
     </form>
 </section>
 
