--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
-    <!-- <link rel="icon" type="image/png" href="./styles/images/FoodFit-favicon.png"/> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FoodFit</title>
@@ -86,6 +85,7 @@
 </section>
 
 <section id="tdee-view" class="view">
+    <p id="tdee-p">What is TDEE?<br> TDEE, total daily energy expenditure, is the amount of energy in calories you burn per day. TDEE is best calculated by factoring in your BMR, or basal metabolic rate, and your activity level.<br></p>
     <form>
 
         <select name="sex" id="sex">
