--- a/index.html
+++ b/index.html
@@ -87,27 +87,26 @@
 <section id="tdee-view" class="view">
     <p id="tdee-p">What is TDEE?<br> TDEE, total daily energy expenditure, is the amount of energy in calories you burn per day. TDEE is best calculated by factoring in your BMR, or basal metabolic rate, and your activity level.<br></p>
     <form>
-
         <select name="sex" id="sex">
-            <option selected disabled>Select One</option>
-            <option value="male">male</option>
-            <option value="female">female</option>
+            <option selected disabled>Gender</option>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
         </select>
         <input type="text" id="age" placeholder="Age">
-        <input type="text" id="height" placeholder="height in inches">
-        <input type="text" id="weight" placeholder="weight in pounds">
+        <input type="text" id="height" placeholder="Height in Inches">
+        <input type="text" id="weight" placeholder="Weight in Pounds">
         <select id="activityLevel">
-            <option selected disabled>Select One</option>
-            <option value="1.2">sedentary</option>
-            <option value="1.375">lightly active</option>
-            <option value="1.55">moderately active</option>
-            <option value="1.725">very active</option>
-            <option value="1.9">extremely active</option>
+            <option selected disabled>Activity Level</option>
+            <option value="1.2">Sedentary</option>
+            <option value="1.375">Lightly Active</option>
+            <option value="1.55">Moderately Active</option>
+            <option value="1.725">Very Active</option>
+            <option value="1.9">Extremely Active</option>
         </select>
+        <p id="tdee-spot">Your TDEE is: <span id="tdee-answer"> </span></p>
         <button type="click" class="submit" id="tdee-submit">Submit</button>
         <a href="./food-search" class="homepage-button">Search Food</a> 
     </form>
-    <p id="tdee-spot">Your TDEE is: <span id="tdee-answer"> </span></p>
 </section>
 
 <section id="foodResults-view" class="view">
