more spacing on homepage

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <section id="home-view" class="view">
     <img class="homepage-masthead" src="styles/images/foodBackground.png" alt="Food Imag">
     <div class="info">
-    <h3>Welcome to FoodFit! <br> <br> This app helps with both sides of the 80/20 health and fitness equation by helping you choose food and activities to meet your goals.</h3>
+    <h3>Welcome to FoodFit! <br> This app helps with both sides of the 80/20 health and fitness equation by helping you choose food and activities to meet your goals.</h3>
     <br>
     <p class="home-para">Search for recipes based on an ingredient, calorie range, and dietary restriction.</p>
     <a href="./food-search" class="homepage-button">Search Food</a>                
